Resolves incorrect java version usage